--- a/index.html
+++ b/index.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
+<head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
-  </head>
-  <body>
+    <style>
+        .video-container {
+            max-width: 853px;
+            margin: 0 auto;
+        }
+    </style>
+</head>
+<body>
 
-<p>РАССКАЗ ЛЕВОНА МКРТЧЯНА О ГЕНОЦИДЕ </p>
+    <p>РАССКАЗ ЛЕВОНА МКРТЧЯНА О ГЕНОЦИДЕ</p>
 
+    <div class="video-container">
+        <iframe
+            src="https://vk.com/video_ext.php?oid=13390212&id=456239242&hd=2"
+            width="853"
+            height="480"
+            frameborder="0"
+            allowfullscreen
+            allow="autoplay; encrypted-media; picture-in-picture">
+        </iframe>
+    </div>
 
-    <iframe src="https://vkvideo.ru/video_ext.php?oid=13390212&id=456239242&hd=2&autoplay=1" width="853" height="480" allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
-
-  </body>
+</body>
 </html>
