--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>HTML Academy: Седона - Мкртчян Григор </title>
     <link rel="icon" href="favicon.ico">
     <link rel="icon" type="image/png" href="images/favicon.png">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <div class="wrapper">
