--- a/catalog.html
+++ b/catalog.html
@@ -2,10 +2,10 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
+    <title>HTML Academy: Седона - Мкртчян Григор </title>
     <link rel="icon" href="favicon.ico">
     <link rel="icon" type="image/png" href="images/favicon.png">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <div class="wrapper">
@@ -13,7 +13,7 @@
         <nav class="navigation">
           <div class="navigation-wrapper">
             <a class="navigation-logo" href="index.html">
-              <img class="navigation-img" src="images/logo.png" alt="Логотип города Седона.">
+              <img class="navigation-img" src="images/logo.svg" alt="Логотип города Седона.">
             </a>
             <ul class="navigation-list">
               <li class="navigation-item">
@@ -187,70 +187,68 @@
               </li>
             </ul>
           </div>
-          <ul class="product-list">
-            <li class="product-card">
-              <a class="product-card-link" href="#">
-                <img class="product-card-image" src="images/hotel-1.jpg" width="300" height="212" alt="Звёздное небо в расщелине гор.">
-                <h3 class="product-card-title">Amara Resort & Spa</h3>
-                <div class="product-card-wrapper">
-                  <p class="product-card-type">Гостиница</p>
-                  <p class="product-card-prise">
-                    <b class="product-card-prise-mark">От 4000 &#8381;</b>
-                  </p>
-                </div>
-              </a>
-              <a class="button button-detailed" href="#">Подробнее</a>
-              <a class="button button-favorite" href="#">В избранное</a>
-              <div class="product-rating rating-4"></div>
-              <p class="button button-rating">Рейтинг: 8,5</p>
+          <ul class="products-list">
+            <li class="products-card">
+              <img class="products-card-img" src="images/hotel-1.jpg" width="300" height="212"
+                alt="Скалы на фоне звезд">
+              <h3 class="products-card-title">Amara Resort & Spa</h3>
+              <p class="products-card-type">Гостиница</p>
+              <p class="products-card-price">От 4000 ₽</p>
+              <a class="products-card-button-more button" href="#">Подробнее</a>
+              <button class="favourite-button  button" type="button">В избранное</button>
+              <div class="products-card-stars stars-four">
+                <span class="visually-hidden">4 звезды</span>
+              </div>
+              <p class="products-card-rating">Рейтинг:
+                <span class="rating-count">8,5</span>
+              </p>
+
             </li>
-            <li class="product-card">
-              <a class="product-card-link" href="#">
-                <img class="product-card-image" src="images/hotel-2.jpg" width="300" height="212" alt="Радуга над горным хребтом.">
-                <h3 class="product-card-title">Villas at Poco Diablo</h3>
-                <div class="product-card-wrapper">
-                  <p class="product-card-type">Гостиница</p>
-                  <p class="product-card-prise">
-                    <b class="product-card-prise-mark">От 5000 &#8381;</b>
-                  </p>
-                </div>
-              </a>
-              <a class="button button-detailed" href="#">Подробнее</a>
-              <a class="button button-favorite-added" href="#">В избранном</a>
-              <div class="product-rating rating-4"></div>
-              <p class="button button-rating">Рейтинг: 9,2</p>
+            <li class="products-card">
+              <img class="products-card-img" src="images/hotel-2.jpg" width="300" height="212"
+                alt="Скалы на фоне радуги">
+              <h3 class="products-card-title">Villas at Poco Diablo</h3>
+              <p class="products-card-type">Гостиница</p>
+              <p class="products-card-price">От 5000 ₽</p>
+              <a class="products-card-button-more button" href="#">Подробнее</a>
+              <button class="unfavourite-button  button" type="button">В избранном</button>
+              <div class="products-card-stars stars-four">
+                <span class="visually-hidden">4 звезды</span>
+              </div>
+              <p class="products-card-rating">Рейтинг:
+                <span class="rating-count">9,2</span>
+              </p>
+
             </li>
-            <li class="product-card">
-              <a class="product-card-link" href="#">
-                <img class="product-card-image" src="images/hotel-3.jpg" width="300" height="212" alt="Горы на фоне голубого неба.">
-                <h3 class="product-card-title">Desert Quail Inn</h3>
-                <div class="product-card-wrapper">
-                  <p class="product-card-type">Гостиница</p>
-                  <p class="product-card-prise">
-                    <b class="product-card-prise-mark">От 2500 &#8381;</b>
-                  </p>
-                </div>
-              </a>
-              <a class="button button-detailed" href="#">Подробнее</a>
-              <a class="button button-favorite" href="#">В избранное</a>
-              <div class="product-rating rating-3"></div>
-              <p class="button button-rating">Рейтинг: 6,9</p>
+            <li class="products-card">
+              <img class="products-card-img" src="images/hotel-3.jpg" width="300" height="212"
+                alt="Скала и закат">
+              <h3 class="products-card-title">Desert Quail Inn</h3>
+              <p class="products-card-type">Гостиница</p>
+              <p class="products-card-price">От 2500 ₽</p>
+              <a class="products-card-button-more button" href="#">Подробнее</a>
+              <button class="favourite-button  button" type="button">В избранное</button>
+              <div class="products-card-stars stars-three">
+                <span class="visually-hidden">3 звезды</span>
+              </div>
+              <p class="products-card-rating">Рейтинг:
+                <span class="rating-count">6,9</span>
+              </p>
             </li>
-            <li class="product-card">
-              <a class="product-card-link" href="#">
-                <img class="product-card-image" src="images/hotel-4.jpg" width="300" height="212" alt="Гора на фоне звёздного неба.">
-                <h3 class="product-card-title">GreenTree Inn</h3>
-                <div class="product-card-wrapper">
-                  <p class="product-card-type">Гостиница</p>
-                  <p class="product-card-prise">
-                    <b class="product-card-prise-mark">От 1500 &#8381;</b>
-                  </p>
-                </div>
-              </a>
-              <a class="button button-detailed" href="#">Подробнее</a>
-              <a class="button button-favorite" href="#">В избранное</a>
-              <div class="product-rating rating-2"></div>
-              <p class="button button-rating">Рейтинг: 5,0</p>
+            <li class="products-card">
+              <img class="products-card-img" src="images/hotel-4.jpg" width="300" height="212"
+                alt="Ночное небо со звездами и темные скалы">
+              <h3 class="products-card-title">GreenTree Inn</h3>
+              <p class="products-card-type">Гостиница</p>
+              <p class="products-card-price">От 1500 ₽</p>
+              <a class="products-card-button-more button" href="#">Подробнее</a>
+              <button class="favourite-button  button" type="button">В избранное</button>
+              <div class="products-card-stars stars-two">
+                <span class="visually-hidden">2 звезды</span>
+              </div>
+              <p class="products-card-rating">Рейтинг:
+                <span class="rating-count">5,0</span>
+              </p>
             </li>
           </ul>
           <ul class="pagination">
