--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       <header class="page-header">
         <nav class="navigation">
           <div class="navigation-wrapper">
-          <a class="navigation-logo" href="#">
-            <img class="navigation-img" src="images/logo.png" width="140" height="70" alt="Логотип города Седона.">
-          </a>
+            <a class="navigation-logo" href="index.html">
+              <img class="navigation-img" src="images/logo.svg" alt="Логотип города Седона.">
+            </a>
             <ul class="navigation-list">
               <li class="navigation-item">
                 <a class="navigation-link navigation-current" href="#">Главная</a>
@@ -55,8 +55,8 @@
               <a class="button button-login" href="#">Хочу сюда!</a>
               <li class="navigation-item">
 
-              </li>
-            </ul>
+            </li>
+          </ul>
         </nav>
       </header>
       <main class="main-container main-index">
