--- a/catalog.html
+++ b/catalog.html
@@ -22,7 +22,7 @@
               <a class="navigation-link" href="index.html">Главная</a>
             </li>
             <li class="navigation-item">
-              <a class="navigation-link" href="sedona.html">О Седоне</a>
+              <a class="navigation-link" href="#">О Седоне</a>
             </li>
             <li class="navigation-item">
               <a class="navigation-link link-active" aria-current="page" href="#">Гостиницы</a>
@@ -327,7 +327,7 @@
         </div>
       </footer>
     </div>
-    <script src="script.js"></script>
+    <script src="/2552419-sedona-2/script/script.js"></script>
   </body>
 
 </html>
