--- a/modal.html
+++ b/modal.html
@@ -262,7 +262,7 @@
         </section>
       </div>
     </div>
-    <script src="script.js"></script>
+    <script src="/2552419-sedona-2/script/script.js"></script>
   </body>
 
 </html>
