--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <a class="navigation-link link-active" aria-current="page" href="#">Главная</a>
             </li>
             <li class="navigation-item">
-              <a class="navigation-link" href="sedona.html">О Седоне</a>
+              <a class="navigation-link" href="#">О Седоне</a>
             </li>
             <li class="navigation-item">
               <a class="navigation-link" href="catalog.html">Гостиницы</a>
