удалил лишние файлы

--- a/modal.html
+++ b/modal.html
@@ -6,8 +6,7 @@
     <title>HTML Academy: Седона</title>
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
-<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+    
   </head>
 
   <body>
@@ -22,7 +21,7 @@
               <a class="navigation-link link-active" aria-current="page" href="#">Главная</a>
             </li>
             <li class="navigation-item">
-              <a class="navigation-link" href="sedona.html">О Седоне</a>
+              <a class="navigation-link" href="#">О Седоне</a>
             </li>
             <li class="navigation-item">
               <a class="navigation-link" href="catalog.html">Гостиницы</a>
